# mlops_docker

./: .env.exemple  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  deploy-docs.yml
app_api/: Dockerfile  main.py  mkdocs.yml  pyproject.toml  test_db.py
app_api/app_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app_api/docs/: index.md  reference.md
app_api/maths/: __init__.py  mon_module.py
app_api/models/: models.py
app_api/modules/: connect.py  crud.py
app_front/: Dockerfile  main.py  pyproject.toml
app_front/pages/: calcul.py  history.py
tests/: test_api.py
