[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-api"
version = "0.1.0"
description = "Projet Orchestration "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "psycopg2-binary",
    "ruff>=0.15.5",
    "tree>=0.2.4",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",
    "tests.*",
    "__pycache__",
    "*.egg-info",
    "*.pyc",
]

[tool.pytest.ini_options]
# On force pytest à considérer le dossier app_api comme une source
pythonpath = ["."] 
testpaths = ["tests"]

